workloads/rabbitmq/overlays/eks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: messaging
  labels:
    app.kubernetes.io/part-of: messaging-platform
