workloads/rabbitmq/overlays/eks/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-metrics
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/component: metrics
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/component: rabbitmq
  ports:
    - name: metrics
      port: 15692
      targetPort: 15692
      protocol: TCP
