workloads/rabbitmq/overlays/eks/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbitmq-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq
      app.kubernetes.io/component: rabbitmq
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: backend
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dev
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: keda
      ports:
        - protocol: TCP
          port: 5671
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: rabbitmq
              app.kubernetes.io/component: rabbitmq
      ports:
        - protocol: TCP
          port: 4369
        - protocol: TCP
          port: 25672
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: rabbitmq-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: rabbitmq-cluster-operator
              app.kubernetes.io/component: rabbitmq-operator
      ports:
        - protocol: TCP
          port: 15671
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: rabbitmq-provisioner
              app.kubernetes.io/component: credential-provisioning
      ports:
        - protocol: TCP
          port: 15671
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
      ports:
        - protocol: TCP
          port: 15692
